--- a/www/wp-content/themes/eventchamp-child/style.css
+++ b/www/wp-content/themes/eventchamp-child/style.css
@@ -68,17 +68,50 @@
 .event-list-style-4 .content {
 	background: #FFFFFF;
 	padding: 25px 30px 13px;
-	border: 1px solid violet;
+	border: 1px solid #c8c8c8;
 	border-radius: 3px;
+	float: left;
 }
 
 .event-list-style-4 .content:hover {
-	background: wheat;
+	background: #ffeebe;
 	padding: 25px 30px 13px;
-	border: 1px solid violet;
+	border: 1px solid #6600ff;
+}
 
+.event-list-style-4 .content.adv {
+	background: #ffeebe;
+	border: 1px solid #c8c8c8;
+}
+.event-list-style-4 .content.adv:hover {
+	background: white;
+	border: 1px solid #6600ff;
 
 }
+
+
+
+.event_adv{
+	width: 0;
+	height: 0;
+	border-top: 40px solid violet;
+	border-right: 40px solid transparent;
+	position: absolute;
+	content:'asdad';
+}
+
+.text_adv {
+	position: absolute;
+	-moz-transform: rotate(-45deg);
+	-webkit-transform: rotate(-45deg);
+	-o-transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+	top: 5px;
+	left: 15px;
+	color: white;
+}
+
 
 .event-list-style-4 .excerpt {
 	margin-bottom: 14px;
@@ -88,11 +121,18 @@
 .event-list-style-4 .left-label{
 
 	float: left;
-	width: 200px;
 	background-color: lightgreen;
-	background-position-x: 50px;
-
+	width: 180px;
+	border-left-width: 0;
+	border-left: solid rgb(2, 171, 61);
 }
+
+
+.event-list-style-4 .left-label .left-label-inside{
+	color: white;
+}
+
+
 
 .event-list-style-4 .details .category {
 	font-size: 12px;
@@ -203,8 +243,10 @@
 
 	float: left;
 	background-color: lightgreen;
-	background-position-x: 50px;
-	width: 100%
+	width: 180px;
+	border-left: solid rgb(2, 171, 61);
+
+
 }
 
 
@@ -329,22 +371,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*srn web*/
 .statusEnded {
     background: #d24a43;
@@ -372,13 +398,7 @@
        border-radius: 5px;
     font-weight: 500;
 }
-.event-list-style-4 .content {
-    background: #FFFFFF;
-    padding: 25px 30px 13px;
-    border: 1px solid violet;
-    border-radius: 3px;
-    float: left;
-}
+
 .all_labels {
     float: left;
     width: 100%;
@@ -503,3 +523,49 @@
     margin: 0 auto;
 }
 
+
+
+.button-content-all.col-md-12 {
+    text-align: center;
+}
+.button-content-all .button-content.bottom a {
+    display: block;
+    background: #ffbb00;
+    border: 1px solid #ffbb00;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    font-weight: 600;
+    width: 100%;
+    padding: 17px 17px 13px;
+    border-radius: 5px;
+}
+.button-content.bottom {
+    display: inline-flex;
+    min-width: 170px;
+    margin: 2%;
+}
+.button-content-all .button-content.bottom a span.content {
+    font-weight: 400;
+    text-transform: none;
+}
+.button-content-all .button-content.bottom a i {
+    font-size: 17px;
+    margin-right: 7px;
+}
+.button-content-all .button-content.bottom a:hover, .button-content-all .button-content.bottom a:focus {
+    background: #FFFFFF;
+    color: #ffbb00;
+}
+.event-locations {
+    display: flex;
+    margin-bottom: 35px;
+    margin-top: 25px;
+}
+.event-share {
+    display: flex;
+    line-height: 40px;
+    padding: 10px 0px 0px;
+}
+.event-share span {
+    padding-right: 10px;
+}
