форма  работает шаг 1

--- a/www/wp-content/themes/eventchamp-child/05,11/style.css
+++ b/www/wp-content/themes/eventchamp-child/05,11/style.css
@@ -94,7 +94,7 @@
 .event_adv{
 	width: 0;
 	height: 0;
-	border-top: 40px solid #6600ff;
+	border-top: 40px solid violet;
 	border-right: 40px solid transparent;
 	position: absolute;
 	content:'asdad';
@@ -592,211 +592,4 @@
 }
 .event-share span {
     padding-right: 10px;
-}
-
-
-.header-style-1.remove-gap-removed .header-main-area .header-menu {
-    float: right;
-    margin-top: 27px;
-}
-.header-style-1.fixed-header-class .header-main-area .header-logo {
-    margin-top: 0px;
-}
-.header-style-1.fixed-header-class .header-main-area .header-menu  {
-    margin-top: 0px;
-}
-
-.sort_home {
-    float: left;
-    width: 100%;
-}
-.sort_home_text {
-    text-align: left; float: left;
-    font-size: 18px;
-    font-weight: bold;    padding: 9px;
-}
-.sort_home_text a{
-    text-align: left;
-    font-size: 18px;
-    font-weight: bold;    color: #6600ff;
-}
-.sort_home .well.well-sm {
-    float: right;    padding: 0;
-    background: white;
-}
-/*.sort_home a#grid span.grid_new {
-    background: url(/wp-content/themes/eventchamp-child/img/grid.png);
-}*/
-.sort_home .btn-group-sm>.btn, .btn-sm {
-    padding: 5px 10px;
-    font-size: 15px;
-    line-height: 1.5;
-    border-radius: 3px;
-}
-.sort_home  .btn-default:hover, .sort_home  .btn-default:active {
-    color: #6600ff;
-    background-color: #e6e6e6;
-    border-color: #adadad;
-}
-.all_left_labels {
-    width: 65%;
-    float: left;
-}
-.all_right_labels {
-    float: left;
-    width: 35%;
-}
-.all_right_labels .all_right_labels_url {
-    width: 33.333%;
-    display: inline-block;
-    text-align: center;
-}
-.categorized-events .nav-tabs {
-    border: 0px;
-    text-align: left;
-    margin-bottom: 45px;
-}
-.event-list-style-4 .title {
-    color: #222222;
-    font-size: 19px;
-    line-height: 1.4;
-    font-weight: 700;
-    margin-bottom: 12px;
-    float: left;
-    width: 50%;
-    max-height: 50px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-.event-list-style-4 .details {
-    margin-bottom: 3px;
-    width: 100%;
-    min-height: 100px;
-}
-
-.event-list-styles.events-hiden {
-    display: none;
-}
-.event-header-list.events-hidens {
-    display: none;
-}
-
-.event-header-list .col-xs-12.col-md-4 p {
-    font-size: 16px;
-    font-weight: bold;
-}
-.event-header-list .col-xs-12.col-md-5 p {
-    font-size: 16px;
-    font-weight: bold;
-}
-.event-header-list .col-xs-12.col-md-3 p {
-    font-size: 16px;
-    font-weight: bold;
-}
-.event-header-list {
-    background: #f8f8f8;
-    float: left;
-    width: 100%;
-    border: 1px solid #c8c8c8;
-    padding-top: 10px;
-}
-
-.event-header-list .ev_name {
-    float: left;
-    width: 50%;
-    text-align: left;
-}
-.event-header-list .ev_cat {
-        float: left;
-    width: 50%;
-    text-align: left;
-}
-.event-header-list .ev_desc {
-       float: left;
-    width: 50%;
-    text-align: left;
-}
-.event-header-list .ev_date {
-        float: left;
-    width: 50%;
-    text-align: left;
-}
-.event-header-list .ev_date p {
-    width: 50%;
-    float: left;
-}
-.event-header-list .ev_rating {
-      float: left;
-    width: 65%;
-    text-align: left;
-}
-.event-header-list .ev_rating p {
-    float: left;
-    width: 50%;
-}
-.event-header-list .ev_links {
-     float: left;
-    width: 35%;
-    text-align: left;
-}
-
-
-.event-list-styles.event-list-style-4.events-list-group-item .content {
-    background: #FFFFFF;
-    padding: 10px 5px 10px;
-    border: 1px solid #c8c8c8;
-    border-radius: 3px;
-    float: left;
-}
-.event-list-styles.event-list-style-4.events-list-group-item .ev_name {
-    width: 63%;
-	float: left;
-}
-.event-list-styles.event-list-style-4.events-list-group-item .ev_cat {
-    width: 37%;
-	float: left;
-}
-.event-list-styles.event-list-style-4.events-list-group-item  .ev_desc {
-    width: 50%;
-    float: left;
-    text-align: left;
-}
-.event-list-styles.event-list-style-4.events-list-group-item  .ev_date {
-    width: 50%;
-    float: left;
-    text-align: left;
-}
-.event-list-styles.event-list-style-4.events-list-group-item .ev_rating {
-    width: 50%;
-    float: left;
-}
-.event-list-styles.event-list-style-4.events-list-group-item .ev_rating {
-    width: 50%;
-    float: left;
-}
-
-.wp-my-cf7 {
-
-	width: 100%;
-	max-width: 700px;
-
-}
-
-.wp-my-cf7 .error-message {
-	color: red;
-}
-.wp-my-cf7 .success-message {
-	color: green;
-}
-
-.wp-my-cf7-form {
-
-}
-
-.wp-my-cf7-list-item {
-
-}
-
-.wp-my-cf7-list-item-label{
-	padding: 5px;
 }
