--- a/www/wp-content/themes/eventchamp-child/style.css
+++ b/www/wp-content/themes/eventchamp-child/style.css
@@ -801,6 +801,12 @@
 	padding: 5px;
 }
 
+input.wp-my-cf7-form-control,
+textarea.wp-my-cf7-form-control,
+select.wp-my-cf7-form-control{
+	border-color: #aaaaaa;
+}
+
 
 
 
